2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/Haulier_Instruction__c.object-meta.xml
<CustomObject>
    <label>Haulier Instruction</label>
    <nameField>
        <displayFormat>HL{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Haulier Instructions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>