2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HT Loading Bay</fullName>
            </value>
            <value>
                <fullName>HT Along Fence</fullName>
            </value>
            <value>
                <fullName>Freeport</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>