2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Cargo_Description__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Description__c</fullName>
    <label>Cargo Description</label>
    <type>TextArea</type>
</CustomField>