2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Container_SEAL__c.field-meta.xml
<CustomField>
    <fullName>Container_SEAL__c</fullName>
    <label>Container/SEAL</label>
    <type>TextArea</type>
</CustomField>