2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <label>Container Type</label>
    <length>99</length>
    <type>Text</type>
</CustomField>