2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Date_of_Trucking_from_Port__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Trucking_from_Port__c</fullName>
    <label>Date of Trucking from Port/Yard</label>
    <type>Date</type>
</CustomField>