2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Date_of_Trucking_to_Residence__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Trucking_to_Residence__c</fullName>
    <label>Date of Trucking to Destination</label>
    <type>Date</type>
</CustomField>