2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Date_Time_from_Port_Yard__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_from_Port_Yard__c</fullName>
    <label>Date/Time from Port/Yard</label>
    <type>DateTime</type>
</CustomField>