2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Date_Time_to_Destination__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_to_Destination__c</fullName>
    <label>Date/Time to Destination</label>
    <type>DateTime</type>
</CustomField>