2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Details_for_Others__c.field-meta.xml
<CustomField>
    <fullName>Details_for_Others__c</fullName>
    <label>Details for Others</label>
    <type>TextArea</type>
</CustomField>