2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Encl_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Encl_Permit_Number__c</fullName>
    <label>Encl. Permit Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>