2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Fetching_of_Customs_Officer_by__c.field-meta.xml
<CustomField>
    <fullName>Fetching_of_Customs_Officer_by__c</fullName>
    <label>Fetching of Customs Officer by</label>
    <length>40</length>
    <type>Text</type>
</CustomField>