2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/File_Date__c.field-meta.xml
<CustomField>
    <fullName>File_Date__c</fullName>
    <label>File Date</label>
    <type>Date</type>
</CustomField>