2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <length>40</length>
    <type>Text</type>
</CustomField>