2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Instruction_Date__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Date__c</fullName>
    <label>Instruction Date</label>
    <type>Date</type>
</CustomField>