2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Loading_Location__c.field-meta.xml
<CustomField>
    <fullName>Loading_Location__c</fullName>
    <label>Loading Location</label>
    <type>TextArea</type>
</CustomField>