2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/No_of_Packages__c.field-meta.xml
<CustomField>
    <fullName>No_of_Packages__c</fullName>
    <label>No. of Packages 几箱货</label>
    <length>40</length>
    <type>Text</type>
</CustomField>