2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Haulier Instructions</relationshipLabel>
    <relationshipName>Haulier_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>