2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Port_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Loading__c</fullName>
    <label>Port of Loading</label>
    <length>45</length>
    <type>Text</type>
</CustomField>