2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/PSA_Account__c.field-meta.xml
<CustomField>
    <fullName>PSA_Account__c</fullName>
    <defaultValue>&quot;152394&quot;</defaultValue>
    <label>PSA Account</label>
    <length>40</length>
    <type>Text</type>
</CustomField>