2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>