2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Residence_Address__c.field-meta.xml
<CustomField>
    <fullName>Residence_Address__c</fullName>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>