2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Shipper_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Consignee__c</fullName>
    <label>Shipper/Consignee</label>
    <type>TextArea</type>
</CustomField>