2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/To_be_Trucked_to__c.field-meta.xml
<CustomField>
    <fullName>To_be_Trucked_to__c</fullName>
    <label>To be Trucked</label>
    <type>TextArea</type>
</CustomField>