2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INBOUND</fullName>
                <default>true</default>
                <label>INBOUND</label>
            </value>
            <value>
                <fullName>OUTBOUND</fullName>
            </value>
            <value>
                <fullName>LOCAL TRANSPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>