2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BHS KINETIC PTE LTD</fullName>
            </value>
            <value>
                <fullName>MAYOR EXPRESS FREIGHT SERVICES PTE LTD</fullName>
            </value>
            <value>
                <fullName>ML LOGISTICS SERVICES</fullName>
            </value>
            <value>
                <fullName>PROSPECT LOGISTICS PTE LTD</fullName>
            </value>
            <value>
                <fullName>SIGMA CONTAINER LINE</fullName>
            </value>
            <value>
                <fullName>SUPREME CONTAINER &amp; WAREHOUSING</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>