2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Vendor_Address__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Address__c</fullName>
    <defaultValue>&quot;If Others: input address here..&quot;</defaultValue>
    <label>Vendor Address</label>
    <type>TextArea</type>
</CustomField>