2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Vendor_Details_Others__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Details_Others__c</fullName>
    <label>Vendor Details (Others)</label>
    <type>TextArea</type>
</CustomField>