2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/fields/Weight_Volume__c.field-meta.xml
<CustomField>
    <fullName>Weight_Volume__c</fullName>
    <label>Weight/Volume</label>
    <length>40</length>
    <type>Text</type>
</CustomField>