2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/recordTypes/AM_CN.recordType-meta.xml
<RecordType>
    <fullName>AM_CN</fullName>
    <active>true</active>
    <description>For Beijing and Shanghai office</description>
    <label>AM CN</label>
</RecordType>