2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/recordTypes/AM_HK.recordType-meta.xml
<RecordType>
    <fullName>AM_HK</fullName>
    <active>true</active>
    <description>For Hong-Kong office</description>
    <label>AM HK</label>
</RecordType>