2nd training/Community/Community/Community1/force-app/main/default/objects/Haulier_Instruction__c/recordTypes/AM_SG.recordType-meta.xml
<RecordType>
    <fullName>AM_SG</fullName>
    <active>true</active>
    <description>For Singapore office</description>
    <label>AM SG</label>
</RecordType>